--- a/pres.Rmd
+++ b/pres.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 ## Introduction and Use Case
 
-During my internship at Securian, I was given a dataset which contained medical conditions (as text) for life insurance applicants.  In the exploratory phase, I used the tf-idf statistic to extract medical conditions characteristic to each underwriting class.  As an example, diabetes may be a condition characteristic to a  underwriting class associated with a higher risk.  
+During my internship at Securian, I was given a dataset which contained medical conditions (as text) for life insurance applicants.  In the exploratory phase, I used the tf-idf statistic to extract medical conditions characteristic to each underwriting (risk) class.  As an example, diabetes may be a condition characteristic to an underwriting class associated with a higher risk.  
 
 Most commonly the tf-idf statistic is used for tasks involved in information retrieval, but is also used as a text vectorization tool for predictive modeling.  
 ## The First Dataset
@@ -46,47 +46,27 @@ tokenizer.func <- function(dat, sp = 'baseball'){
     unnest_tokens(output = word, input = !!sym(colnames(dat)), token = 'words') %>%
     mutate(sport = sp) %>%
     select(sport, word) %>%
-    filter(!grepl('0|1|2|3|4|5|6|7|8|9', word)) # remove numbers
+    filter(!grepl('\\d', word)) %>% # remove numbers
+    mutate(word = str_replace_all(word, '\'s', ""))
   return(tmp)
 }
 baseball.tokenized <- tokenizer.func(baseball)
 cricket.tokenized <- tokenizer.func(cricket, sp = 'cricket')
-head(baseball.tokenized)
-```
-
-The same was done for the text data for the sport of cricket and row-binded into one dataframe.  Below are distributional words for each sport.
-
-```{r tokenized, include=FALSE}
 
 # combine baseball and cricket
-sports <- bind_rows(baseball.tokenized, cricket.tokenized, wiffle.tokenized)
+sports <- bind_rows(baseball.tokenized, cricket.tokenized)
 
-wordfreq <-
-  sports %>%
-  group_by(sport, word) %>%
-  summarise(N = n()) %>%
-  mutate(total = sum(N)) %>%
-  ungroup()
-
-wordfreq %>%
-  mutate(freq = N/total) %>%
-  arrange(desc(freq)) %>%
-  mutate(word = factor(word, levels = unique(word))) %>%
-  group_by(sport) %>%
-  top_n(15, freq) %>%
-  ungroup %>%
-  ggplot(aes(word, freq, fill = sport)) + 
-  scale_fill_manual(values = pal[c(1,4,2)])+
-  geom_col(show.legend = FALSE) +
-  facet_wrap(~sport, dir = 'v', scales = 'free') 
+head(sports)
 ```
+
+The same was done for the text data for the sport of cricket and row-binded into one dataframe.  
 
 ## The Distribution of text data
 
 Text data often follows a lognormal (?) distribution, mainly because the english language repeatly uses the same words, such as 'is', 'the', 'a', etc.  Below is the plot of the proportional distributions of words from both the baseball and cricket text.  
 
 
-```{r dist_plot, warning=TRUE}
+```{r dist_plot, echo=FALSE, warning=FALSE}
 wordfreq <-
   sports %>%
   group_by(sport, word) %>%
@@ -94,7 +74,8 @@ wordfreq <-
   mutate(total = sum(N)) %>%
   ungroup()
 
-wordfreq %>%
+g <- 
+  wordfreq %>%
   mutate(freq = N/total) %>%
   arrange(desc(freq)) %>%
   mutate(word = factor(word, levels = unique(word))) %>%
@@ -107,6 +88,8 @@ wordfreq %>%
   geom_density() + 
   facet_wrap(~sport, dir = 'v', scales = 'free') 
 
+print(suppressWarnings(g))
+
 # Total for both together
 totals <- sports %>% group_by(word) %>% summarize(N= n()) %>% arrange(desc(N)) %>% ungroup
 
@@ -114,11 +97,13 @@ sum <- sum(totals$N[1:6])
 # totals[1:6, 'word']
 ```
 
-In the combined dataframe, the words 'the', 'of', 'a', 'and', 'in', 'to' occur around 20% of the time!  These type of words are often referred to as 'stop words' and sometimes removed in the preprocessing step.  Sometimes, it may be appropriate to use frequency counts as a vector representation for text, but often it may not be an accurate depictor of the textual features.  
+In the combined dataframe, the words 'the', 'of', 'a', 'and', 'in', 'to' occur around 20% of the time!  These type of words are often referred to as 'stop words' and sometimes removed in the preprocessing step.  
+
+Sometimes, it may be appropriate to use frequency counts as a vector representation for text, but often it may not be an accurate depictor of the textual features.  This is the 'bag of words' vector representation of text.  
 
 ## Forming the idf with the natural logarithm
 
-Frequency counts don't really tell us much about the sport of baseball and cricket, and we need to be able to differentiate characteristic words from noise.  The idf (inverse document frequency) achieves just this.  The more often a word appears in a document, the less weight it will receive.   
+Frequency counts don't really tell us much about the sport of baseball and cricket, and we need to be able to differentiate characteristic words from noise.  The idf (inverse document frequency) achieves just this by decreasing its weight for words that occur more often.  See the graph below
 
 ```{r natural_logarithm_plot}
 log.df <- cbind.data.frame('x' = seq(0, 1, by = 0.001), y = log(1/seq(0, 1, by = 0.001)))
@@ -132,7 +117,7 @@ For example, since the word 'the' occurs in both documents, `idf: log(2/2) = 0`.
 
 Term frequency is still important, i.e. if baseball occurs once in a document it may not be as much about baseball as a document that contains the word baseball 50 times.  So, we have arrived at the full version of the tf-idf statistic:
 
-Insert here
+Insert here $ \sqrt(2) $
 
 Variations include:
 - various normalization techniques for the idf, including addition of 1 to the logarithm to avoid division by 0.
@@ -177,7 +162,7 @@ sports_tfidf %>%
 
 ## Common Recomendation Engine: tf_idf with cosine similarity
 
-```{r email_files}
+```{r email_files, include=FALSE}
 tryout2019 <- read.delim2('C://Users//Owner//Documents//Github//tf_idfpresentationonbaseballandcricket//My Emails//tryout-notes.txt', header = FALSE, fill = FALSE, col.names = 'tryout2019', stringsAsFactors = FALSE)
 spam <- read.delim2('C://Users//Owner//Documents//Github//tf_idfpresentationonbaseballandcricket//My Emails//spam-email.txt', header = FALSE, fill = FALSE, col.names = 'spam', stringsAsFactors = FALSE, quote="")
 tryout2018 <- read.delim2('C://Users//Owner//Documents//Github//tf_idfpresentationonbaseballandcricket//My Emails//Tryouts-2018.txt', header = FALSE, fill = FALSE, col.names = 'tryout2018', stringsAsFactors = FALSE)
@@ -199,6 +184,7 @@ library(lsa)
 mat <- cosine(t(as.matrix(df)))  
 
 ```
+
 ## Various methods for text vectorization
 
 There are several commands in both R and Python that will produce a Document Term Matrix with tf-idf weightings.  Something to note is that often these matrices take a term frequency vector instead of a vector of text.  Below is a list and notes on a few of them.  As is typical of R, there is probably a plethora of functions to do the same thing, and conversely in python, one function with a plethora of options.
@@ -207,9 +193,32 @@ R:
 - `DocumentTermMatrix` or `TermDocumentMatrix`.  I didnt try this one as my data was in a dataframe and not structured as a `corpus`.  It does have a control function to choose the tf-idf weightings (`weightTfIdf`) with the option to normalize the term frequencies. 
 - `cast_dtm`.  Better option if you have a tidy dataframe of terms and don't want to work through generating a corpus structure.  Requires a count column (`value`).  The tf-idf weighting is `weighting = tm::weightTfIdf` and can normalize the term frequency. 
 
+## 
+
 Python:
 - `TfIdfTransformer`
 
 
-## The future of tf-idf
-## More on the TfIdf Transformer in Python
+## Pitfalls of tf-idf
+
+The tf-idf statistic pays little attention to relevancy/context.  For example, for the query, 'unique red hat', I can game a simple system.  A user may try this approach if they want their results to appear more often.  
+
+```{r system_game}
+table <- tibble('Document' = c('doc1', 'doc2','doc3'), 'Results' = c('unique, unique, unique, unique, purple, purple, shirt', 'I tipped my cap to the red team', 'This red hat sells for cheap at JcPenny.'))
+table2 <- 
+  unnest_tokens(table, output = 'word', input = Results) %>%
+  group_by(Document, word) %>%
+  summarise(N = n()) %>%
+  ungroup() %>%
+  bind_tf_idf(term = word, document = Document, n = N) %>%
+  filter(word %in% c('unique', 'red', 'hat')) %>%
+  group_by(Document) %>%
+  summarize(sum.tfidf = sum(tf_idf)) %>%
+  select(sum.tfidf)
+  
+kable(table %>% bind_cols(table2), format = 'markdown')
+```
+
+Also, in this context, hat is probably more important than the word unique, but the tf-idf ignores this relevancy.
+
+## More, briefly on the TfIdf in Python
